--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -54,6 +54,18 @@
     margin-bottom: 20px;
     padding-left: 5px;
 
+    
+}
+
+.boekingform {
+    width: 600px;
+    height: 400px;
+    border-radius: 10px;
+
+    border: solid 1px #c7c7c7;
+    background-color: #fff; 
+
+    padding-left: 5px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -62,18 +74,19 @@
 }
 
 .detailbox {
+    display: flex;
     width: 600px;
     height: 800px;
     border-radius: 10px;
-
     background-color: #fff;
     border: solid 1px #c7c7c7;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     text-align: center;
-
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 .bookingInfo {
