--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -92,3 +92,13 @@
 .bookingInfo {
     display: flex;
 }
+
+.pageTitle {
+    display: flex;
+    width: 100%;
+    height: 100px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+
+}
