--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -94,13 +94,15 @@
 }
 
 .pageTitle {
-    display: flex;
+    /* display: flex;
     width: 100%;
     height: 100px;
     align-content: center;
     justify-content: center;
-    align-items: center;
-
+    align-items: center; */
+    width: 350px;
+    margin: 0 auto;
+    border: solid 1px black;
 }
 
 .overzichtbox {
